--- a/demosl/work/index.html
+++ b/demosl/work/index.html
@@ -151,7 +151,7 @@
 
             // nl_organisationName is used for some company specific values in the header (and Sotd)
             // currently supported: Logius and Geonovum (default)
-            nl_organisationName: "TEEC2",
+            nl_organisationName: "EEi",
 
             // prefix for the names of company specific css, svg and ico prefixes
             // defaults to "GN-"
